[package]
name = "gwŷdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
binrw = "0.13.3"
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
clap = { version = "4.4.18", features = ["derive"] }
derivative = "2.2.0"
human_bytes = "0.4.3"
modular-bitfield = "0.11.2"
thiserror = "1.0.56"
